objects/LLC_BI__Data_Source_Item__c.object
<CustomObject>
    <description>This object contains information about the sort order and Data Sources for each Data Source Item.</description>
    <fields>
        <fullName>LLC_BI__Data_Source_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field contains the lookup key to the associated Data Source Section.</description>
        <label>Data Source Section</label>
        <referenceTo>LLC_BI__Data_Source_Section__c</referenceTo>
        <relationshipLabel>Data Source Section Items</relationshipLabel>
        <relationshipName>Data_Source_Section_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data_Source__c</fullName>
        <description>This required master-detail field contains the lookup key to the associated Data Source.</description>
        <label>Data Source</label>
        <referenceTo>LLC_BI__Data_Source__c</referenceTo>
        <relationshipLabel>Data Source Items</relationshipLabel>
        <relationshipName>Data_Source_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Name__c</fullName>
        <description>The system automatically populates this field with the name of the component in the external output.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field determines order of the Data Source Item.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Data Source Item</label>
    <nameField>
        <label>Data Source Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Source Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>